--- a/example_code_passing_validation.html
+++ b/example_code_passing_validation.html
@@ -12,7 +12,7 @@
   <h2>Flatiron Student Daily Schedule</h2>
 
   <p>8:00am Wake up to alarm. Hit snooze button.</p>
-  <img src="https://assets.vogue.com/photos/589133c8b482c0ea0e4d6ac3/master/pass/snooze-button-sleep.gif" alt="Cinderella turning over after the birds try to wake her up.">
+  <img src="https://assets.vogue.com/photos/589133c8b482c0ea0e4d6ac3/master/pass/snooze-button-sleep.gif" alt="Cinderella turning over after the birds try to wake her up."/>
   <p>9:15am Realize that you didn't hit snooze, you hit off on your alarm. Jump out of bed, throw on the first clothing you see, and run out the door.
   <p>10:00am Sit down at computer. Work on lessons.</p>
   <p>1:00pm Lunch! </p>
